# selectel-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/selectel_mcp/: __init__.py  __main__.py  auth.py  clients.py  config.py  server.py
src/selectel_mcp/tools/: __init__.py  account.py  billing.py  compute.py  deploy.py  keypairs.py  network.py  security.py  storage_s3.py  volumes.py
tests/: test_helpers.py
