[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selectel-mcp"
version = "0.1.0"
description = "MCP server for the Selectel cloud (OpenStack compute, S3 object storage, billing)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrei Selivanov", email = "selivanov74@gmail.com" }]
keywords = ["mcp", "selectel", "openstack", "s3", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.2.0",
    "openstacksdk>=3.0.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
selectel-mcp = "selectel_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/a-slvn/selectel-mcp"
Repository = "https://github.com/a-slvn/selectel-mcp"
Issues = "https://github.com/a-slvn/selectel-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/selectel_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
